// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`基本動作テスト ループのテスト:スナップショット 1`] = `
"'position', 'index'
0, 0
105, 1
405, 4
0, 0"
`;

exports[`基本動作テスト ループのテスト:スナップショット 2`] = `
"'position', 'index'
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
500, 5
405, 4
105, 1
605, 6"
`;

exports[`基本動作テスト 非ループのテスト:スナップショット 1`] = `
"'position', 'index'
0, 0
55, 1
105, 1
400, 4"
`;

exports[`基本動作テスト 非ループのテスト:スナップショット 2`] = `
"'position', 'index'
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0
0, 0"
`;
